trying to fix text alignment

--- a/MJStyleSheet.css
+++ b/MJStyleSheet.css
@@ -131,7 +131,7 @@ p {
 /******* PRIVATE PROTECTED PAGE FOR NAIVE BAYES ********/
 
 #datastruct p1 { /*text descriptions*/
-	text-align: center;
+	float: left;
 	font-size: 30px; !important
 	padding-top: 10px;
 	padding-left: 10px;
@@ -165,11 +165,15 @@ p1 img{
 	vertical-align: middle;
 }
 
-/*model design image*/
+/*bayes model image*/
 #datastruct img {
-	float: center;
+	float: left;
 	width: 50%; !important
 	height: auto; !important
+	padding-top: 10px;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-bottom: 10px;
 }
 
 /*javascript button for entering password protected page*/
